# zig-esp-idf-sample

./: .gitignore  README.md  build.zig  sdkconfig.defaults
.devcontainer/: Dockerfile  devcontainer.json  usb-forward.sh
cmake/: extra-components.cmake  patch.cmake  zig-config.cmake
components/: README.md
components/es8311/: CMakeLists.txt  es8311.c  idf_component.yml
components/esp_lcd_sh8601/: CMakeLists.txt  (+2 more)
docs/: getting-started.md  lvgl-zig-guide.md  waveshare-esp32s3-touch-amoled-1.8-integration.md
imports/: bluetooth.zig  bootloader.zig  crc.zig  dsp.zig  error.zig  gpio.zig  heap.zig  http.zig  i2c.zig  i2s.zig  idf.zig  led-strip.zig  logger.zig  lvgl.zig  lwip.zig  mqtt.zig  panic.zig  pcnt.zig  phy.zig  pthread.zig  rtos.zig  segger.zig  spi.zig  uart.zig  version.zig  wifi.zig
include/: stubs.h
main/: CMakeLists.txt  Kconfig.projbuild  app.zig  idf_component.yml  lvgl_integrated_display_helpers.c
main/examples/: dsp-math.zig  es8311-codec.zig  esp-io-expander-tca9554.zig  esp-lcd-sh8601.zig  esp-lcd-touch-core.zig  esp-lcd-touch-ft5x06.zig  lvgl-basic.zig  lvgl-integrated-display.zig  pcf85063-rtc.zig  smartled-rgb.zig  waveshare-axp2101.zig  waveshare-qmi8658.zig  wifi-station.zig
main/lib/: display_touch.zig  ui.zig
patches/: esp_lcd_panel_configs.zig  i2c_and_touch_configs.zig  led_color_component_format_t.zig  led_strip_config_t.zig  led_strip_rmt_config_t.zig  led_strip_rmt_extra_config_20.zig  led_strip_struct_format_layout_15.zig  porttick_period_ms.zig  wifi_ap_config_t.zig  wifi_sta_config_t.zig  xport_can_yield.zig
(+16 files in other folders)
